# http-client-vcr

./: Cargo.toml  DIRECTORY_FORMAT.md  README.md  TEST_INSTRUCTIONS.md
.claude/: settings.local.json
artist_tracks_directory/: interactions.yaml
artist_tracks_directory/bodies/: resp_001.txt  resp_002.txt  resp_003.txt  resp_004.txt  resp_005.txt  resp_006.txt  resp_007.txt  resp_008.txt  resp_009.txt  resp_010.txt  resp_011.txt  resp_012.txt  resp_013.txt  resp_014.txt  resp_015.txt  resp_016.txt  resp_017.txt  resp_018.txt  resp_019.txt  resp_020.txt  resp_021.txt  resp_022.txt  resp_023.txt  resp_024.txt  resp_025.txt  resp_026.txt  resp_027.txt  resp_028.txt  resp_029.txt  resp_030.txt  resp_031.txt  resp_032.txt  resp_033.txt  resp_034.txt  resp_035.txt  resp_036.txt  resp_037.txt  resp_038.txt  resp_039.txt  resp_040.txt  (+7 more)
examples/: basic_usage.rs  directory_format_example.rs  filtering_behavior.rs  filtering_example.rs  format_comparison.rs  noop_client_example.rs  simple_directory_test.rs
src/: cassette.rs  filter.rs  form_data.rs  lastfm_filters.rs  lib.rs  matcher.rs  noop_client.rs  serializable.rs  utils.rs
tests/: directory_vcr_tests.rs  test_concurrent_requests_edge_case.rs  test_exhausted_interactions_error_handling.rs  test_mixed_request_types_sequential_matching.rs  test_partial_replay_restart_edge_case.rs
tests/fixtures/concurrent_requests_test/: interactions.yaml
tests/fixtures/exhausted_interactions_test/: interactions.yaml
tests/fixtures/json_text_responses_test/: interactions.yaml
(+27 files in other folders)
