 [package]
name = "http-client-vcr"
version = "1.1.0"
edition = "2021"
description = "Record http request and responses for testing"
license = "MIT"
repository = "https://github.com/colonelpanic8/http-client-vcr"
homepage = "https://github.com/colonelpanic8/http-client-vcr"
documentation = "https://docs.rs/http-client-vcr"

[[bin]]
name = "vcr-inspect"
path = "bin/main.rs"

[dependencies]
# Core dependencies
http-client = { version = "^6.6.3", package = "http-client-2", default-features = false }
http-types = { version = "^3.1.0", package = "http-types-2" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
base64 = "0.22"
log = "0.4"
levenshtein = "1.0"
tokio = { version = "1.0", features = ["fs", "sync", "macros", "rt-multi-thread"], optional = true }
clap = "4.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["tokio"]
tokio-fs = ["tokio"]
